--- a/css/style.css
+++ b/css/style.css
@@ -1,434 +1,33 @@
 /*
 	Author: Shubham Jain;
 	Email: shubhamjain1602@gmail.com;
-	Linkedin: in.linkedin.com/in/shubhamjain16/;
+	Linkedin: www.shubhamja.in;
 */
-
 
 html{
 	height: 100%;
 }
-@font-face {
-  font-family: 'rimouski';
-  src: url('../fonts/rimouski-sb.ttf'); /* IE9 Compat Modes */
-  src: url('../fonts/rimouski-sb.ttf')  format('truetype');
-}
 body{
-	font-family: 'calibri';
+	font-family: 'Nunito', sans-serif;
+}
+
+#loader{
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
 	height: 100%;
-	padding-top: 80px;
-}
-h1, h2, h3, h4, h5{
-	font-family: 'rimouski';
-}
-h1{
-	font-size: 38px;
-}
-p{
-	font-size: 18px;
-}
-blockquote{
-	font-weight: 600;
-	border-left: none;
-}
-.blue{
-	color: #0DC8BE;
+	z-index: 99999;
+	background:url(../images/preloader.gif) 50% 50% no-repeat #fff;
 }
 
-
-/*Navbar*/
-	.navbar{
-		margin-bottom: 0px;
-		height: 90px;
-		font-family: 'rimouski';
-	}
-	.navbar-inverse, .navbar-inverse .navbar-collapse{
-		background: #000;
-	}
-	.navbar .container{
-		margin-top: 15px;
-	}
-	.navbar-brand{
-		height: 80px;
-		padding: 0px 15px;
-		margin-top: -8px;
-	}
-	.navbar-brand img{
-		height: 75px;
-		width: auto;
-	}
-	.navbar-nav{
-		margin: 17px;
-	}
-	.navbar-inverse .navbar-nav li a{
-		@font-family: 'rimouski';
-		color: #fff;
-		padding-top: 6px;
-		padding-bottom: 6px;
-		font-weight: 300;
-		font-size: 1.3em;
-	}
-	.navbar-inverse .navbar-nav li a:hover{
-		color: #777;
-	}
-	.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus{
-		color: #0DC8BE;
-	}
-	.navbar-inverse .navbar-nav .divider {
-		font-size: 1.7em;
-		color: #fff;
-	}
-	.navbar-inverse .navbar-nav li:first-child {
-		border-left: none;
-	}
-/*Figs*/
-	.fig{
-		background: #0DC8BE;
-		font-weight: 400;
-		color: #fff;
-		border-radius: 50% 50% 50% 5px;
-	}
-	.fig-tl{
-		border-radius: 5px 50% 50% 50%;
-	}
-	.fig-tr{
-		border-radius: 50% 5px 50% 50%;
-	}
-	.fig-br{
-		border-radius: 50% 50% 5px 50%;
-	}
-
-
-/*Banner*/
-	.banner{
-		/*height: 75%;*/
-		background-size: cover;
-		background-position: right 30%;
-		background-repeat: no-repeat;
-		/*min-height: 350px;*/
-	}
-	.bgh{
-		background-image: url('../images/bg1.jpg');
-		background-attachment: fixed;
-	}
-	.bg1{
-		background-image: url('../images/bg2.jpg');
-		background-attachment: fixed;
-	}
-	.bg2{
-		background-image: url('../images/bg3.jpg');
-		background-attachment: fixed;
-	}
-	.bg3{
-		background-image: url('../images/bg4.jpg');
-		background-attachment: fixed;
-	}
-	.bg4{
-		background-image: url('../images/bg5.jpg');
-		background-attachment: fixed;
-	}
-	.black-bg{
-		background: rgba(0,0,0,.6);
-		color: #fff;
-		padding-top: 4%;
-		padding-bottom: 4%;
-	}
-	.display-inline{
-		display: inline-block;
-	}
-	.va-center{
-		display: inline-block;
-		float: none;
-		vertical-align: middle;
-	}
-	.va-bottom{
-		display: inline-block;
-		float: none;
-		vertical-align: bottom;
-	}
-	.black-bg small{
-		color: #fff;
-		font-style: italic;
-		line-height: 32px;
-		font-weight: 400;
-	}
-	.media-link{
-		position: fixed;
-		width: 45px;
-		display: inline-block;
-		height: 155px;
-		right: 20px;
-		top: 100px;
-	}
-	.banner .fig{
-		color:#fff;
-		background: #0DC8BE;
-	}
-	.media-link .fig{
-		vertical-align: center;
-	}
-	.media-link ul li{
-		padding: 7px;
-		font-size: 16px;
-	}
-	.grid{
-		vertical-align: baseline;
-		
-	}
-	.grid p{
-		font-size: 17px;
-	}
-	.grid li{
-		width: 45%;
-		padding-top: 45%;
-		/* padding: 14%; */
-		margin: 2%;
-		font-family: 'rimouski';
-	}
-	.grid li a p{
-		margin-left: 25%;
-		/* padding: 26% 13%; */
-		width: 50%;
-		height: 0%;
-		margin-top: -65%;
-		font-size: 19px;
-		vertical-align: middle;
-		color: #fff;
-	}
-	.grid a:hover{
-		text-decoration: none;
-	}
-	.grid li{
-		cursor: pointer;
-	}
-	.col-sm-8.black-bg p{
-		margin-left: 30px;
-	}
-	.grid.active li p{
-		margin-left: 20%;
-		/* padding: 26% 13%; */
-		width: 50%;
-		height: 0%;
-		margin-top: -71%;
-		font-size: 13px;
-		vertical-align: middle;
-	}
-	.bullet{
-		background: url(../images/bulletback.png) left center no-repeat;
-		padding-left: 30px;
-	}
-	.grid.active .fig.active{
-		background: #fff;
-	}
-	.grid.active li.fig.active a p{
-		color: #0DC8BE;
-	}
-
-
-
-/*Carousel*/
-	#intro{
-		background-color: #000;
-		margin: 0px;
-		padding-top: 25px;
-		padding-bottom: 25px;
-	}
-	#intro .carousel-inner > .item {
-		margin-top: 25px;
-		margin-bottom: 50px;
-		color: #fff;
-		font-weight: 300;
-	}
-	#intro .carousel-inner > .item h3{
-		font-weight: 300;
-	}
-	#intro .carousel-indicators {
-		position: absolute;
-		bottom: 10px;
-		left: 75%;
-		z-index: 15;
-		width: 50%;
-		padding-left: 0;
-		text-align: right;
-		list-style: none
-	}
-	#intro .carousel-indicators li {
-		background-color: #333333;
-		border: 1px solid #212121;
-	}
-	#intro .carousel-indicators .active {
-		background-color: #666666;
-		border: 1px solid #292929;
-	}
-
-
-.content {
-	margin-top: 30px;
-	padding-bottom: 30px;
-}
-.border-b{
-	border-bottom: 1px dashed #B9B9B9;
-}
-.content p{
-	font-weight: 500;
-}
-.content blockquote{
-	padding-left: 0px;
-}
-ul {
-    list-style-image: url(../images/bullet.png);
+a, a:hover, a:visited, a:focus{
+	text-decoration: none;
 }
 
-ul li.divider{
-	font-size: 1.4em;
-	font-weight: 100;
-}
-.content ul li{
-	font-size: 18px;
-	font-weight: 400;
-	padding: 15px 5% 10px 5px;
-}
-.label{
-	background-color: #000;
-	color: #fff;
-	margin-bottom: 25px;
-	white-space: normal;
-}
-.btn{
-	font-size: 19px;
-	border: none;
-	border-radius: 0px;
-}	
-.btn-info{
-	background-color: #0DC8BE;
-}
-/*Social Media container*/
-	#know h1{
-		color: #000;
-	}
-	.social-media{
-		margin: 40px 0px;
-		margin-top: -20px;
-		height: 40%;
-		background: url('../images/bg.jpg') center center repeat-y;
-		background-size: auto 100%;
-		background-attachment: fixed;
-		min-height: 350px;
-		padding: 5% 10px;
-	}
-	.social-media .list-inline{
-		margin-top: 30px;
-	}
-	.social-media .list-inline li{
-		padding: 2.5% 5%;
-	}
-	.social-media .fig{
-		background:#000;
-		color: #0DC8BE;
-		/*height: 200px;*/
-		/*width: 200px;*/
-	}
-	.social-media .fig{
-		vertical-align: center;
-	}
-
-/*Footer*/
-	footer{
-		min-height: 80px;
-		background-color: #000;
-		color: #fff;
-		@font-family: 'rimouski';
-		font-size: 1.6em;
-		padding: 15px 10px 3px;
-	}
-	footer .fig{
-		background: #fff;
-		color: #000;
-	}
-	footer p{
-		font-size: 15px;
-		margin:5px 0 0;
-	}
-	footer li a, footer li a:visited{
-		color: #fff;
-	}
-/*New addition*/
-
-	.sect3-md{
-		padding-left: 0px;
-		padding-right: 0px;
-		margin-left: 5%;
-		/*Source: http://tympanus.net/codrops/2014/08/19/making-svgs-responsive-with-css/ */
-		height: 0;             /* collapse the container's height */
-    	width: 90%;    /* specify any width you want (a percentage value, basically) */
-    	/* apply a padding using the following formula */
-    	/* this formula makes sure the aspect ratio of the container equals that of the svg graphic */
-    	padding-top: 85.53797468%; /*(svg height / svg width) * width-value || width="948px" height="910px" */
-   		position: relative;    /* create positioning context for svg */
-	}
-	.sect3-md iframe{
-	    position: absolute;
-	    top: 0;
-	    left: 0;
-	    width: 100%;
-	    height: 100%;
-	    border:none;
-	}
-
-
-/*Modal*/
-	.modal-content {
-	  background-color: transparent;
-	  -webkit-background-clip: padding-box;
-	          background-clip: padding-box;
-	  border: none;
-	  border: none;
-	  border-radius: 6px;
-	  outline: 0;
-	  -webkit-box-shadow: none;
-	          box-shadow: none;
-	}
-	.modal-backdrop {
-		background: url(../images/modal-bg.png) center center no-repeat;
-		background-size: auto 100%;
-		background-color: transparent;
-	}
-	.modal-backdrop.in {
-	  opacity: 1;
-	}
-	@media (min-width: 768px) {
-		.modal {
-	    	width: 40%;
-	    	height: 70%;
-	    	top:15%;
-	    	bottom: 15%;
-	    	/*left:30%;*/
-	    	margin: auto auto auto auto;
-	    	/*overflow-y:scroll;*/
-    	}
-    	.modal-dialog{
-    		width: 80%;
-    		height: 100%;
-    		margin: auto auto auto auto;
-    	}
-    	.modal-body{
-    		overflow-y:scroll;
-    		height: 60%;
-    		/*max-height:none;
-    		position:absolute;
-    		top:50px;
-    		bottom:50px;
-    		right:0px;
-    		left:0px;*/
-    	}
-    }
-/* Aneesh Styling */
-
-.leafAction li{
-	opacity: 0.7;
-	transition:all 0.4s ease-in-out;
+#ieee-links{
+	padding-top: 5px;
+	margin: auto auto;
+	font-size: 0.9em;
 }
 
-.leafAction li:hover{
-	opacity: 1.0;
-};
