--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,16 @@ html{
 }
 body{
 	height: 100%;
+	padding-top: 50px;
 	font-family: 'Nunito', sans-serif;
+}
+
+/* Wrapper for page content to push down */
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin-top: -50px;
 }
 
 #loader{
@@ -32,6 +41,10 @@ a, a:hover, a:visited, a:focus{
 	font-size: 0.9em;
 }
 
+#navigation > .navbar{
+	margin-bottom: 0px;
+}
+
 .carousel-control.left,.carousel-control.right{
 	background-image: none;
 }
@@ -47,3 +60,163 @@ a, a:hover, a:visited, a:focus{
     z-index: 11;
     position: relative;
 }
+
+.section-1{
+	padding-bottom: 20px;
+	border-bottom: 5px solid #f2e124;
+}
+
+.section-1, .section-1 .row{
+	min-height: 43rem;
+}
+
+/*Section Navigation by Nikolay Talanov (source: http://codepen.io/suez/public/)*/
+
+		.demo {
+		  position: absolute;
+		  width: 36rem;
+		  height: 43rem;
+		  padding-top: 22rem;
+		  background: #FFFFFF;
+		  box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.4);
+		  /*font-family: "Open Sans", Helvetica, Arial, sans-serif;*/
+		}
+		.demo__content {
+		  position: relative;
+		  height: 100%;
+		}	
+		.demo__elems {
+		  position: relative;
+		  height: 21rem;
+		}
+		.demo__elem {
+		  /*display: block;*/
+		  position: relative;
+		  height: 7rem;
+		  font-size: 1.8rem;
+		  line-height: 7rem;
+		  padding-left: 3rem;
+		  border-top: 1px solid #e7e7e7;
+		}
+		.demo__hover {
+		  z-index: 2;
+		  position: absolute;
+		  left: 0;
+		  width: 100%;
+		  height: 7rem;
+		  cursor: pointer;
+		}
+		.demo__link{
+			display: block;
+			height: 100%;
+			width: 100%
+		}
+		.demo__hover-1 {
+		  top: 0;
+		}
+		.demo__hover-1:hover ~ .demo__highlighter,
+		.demo__hover-1.active ~ .demo__highlighter {
+		  transform: translateY(0);
+		}
+		.demo__hover-1:hover ~ .demo__highlighter .demo__elems,
+		.demo__hover-1.active ~ .demo__highlighter .demo__elems {
+		  transform: translateY(0);
+		}
+		.demo__hover-2 {
+		  top: 7rem;
+		}
+		.demo__hover-2:hover ~ .demo__highlighter,
+		.demo__hover-2.active ~ .demo__highlighter  {
+		  transform: translateY(7rem);
+		}
+		.demo__hover-2:hover ~ .demo__highlighter .demo__elems,
+		.demo__hover-2.active ~ .demo__highlighter .demo__elems {
+		  transform: translateY(-7rem);
+		}
+		.demo__hover-3 {
+		  top: 14rem;
+		}
+		.demo__hover-3:hover ~ .demo__highlighter,
+		.demo__hover-3.active ~ .demo__highlighter {
+		  transform: translateY(14rem);
+		}
+		.demo__hover-3:hover ~ .demo__highlighter .demo__elems,
+		.demo__hover-3.active ~ .demo__highlighter .demo__elems {
+		  transform: translateY(-14rem);
+		}
+		.demo__hover-3:hover ~ .demo__example .example-adv__top,
+		.demo__hover-3:hover ~ .demo__example .example-adv__mid,
+		.demo__hover-3:hover ~ .demo__example .example-adv__elemne {
+		  transform: translateY(100%);
+		  opacity: 0;
+		  transition: transform 0.2s, opacity 0.2s;
+		}
+		.demo__hover-3:hover ~ .demo__example .example-both {
+		  background: #39A5F7;
+		  transition: background-color 0.4s 0.2s;
+		}
+		.demo__hover-3:hover ~ .demo__example .example-both__half {
+		  opacity: 1;
+		  transform: scale(1);
+		  transition: transform 0.4s 0.2s, opacity 0.4s 0.2s;
+		}
+		.demo__highlighter {
+		  z-index: 1;
+		  position: absolute;
+		  top: 0;
+		  left: -1rem;
+		  width: 38rem;
+		  height: 7rem;
+		  background: #39A5F7;
+		  overflow: hidden;
+		  box-shadow: 0 0.3rem 0.2rem rgba(0, 0, 0, 0.3);
+		  transition: transform 0.5s cubic-bezier(0.59, 0.04, 0.3, 1.43);
+		}
+		.demo__highlighter .demo__elems {
+		  position: absolute;
+		  top: 0;
+		  left: 1rem;
+		  transition: transform 0.5s cubic-bezier(0.59, 0.04, 0.3, 1.43);
+		}
+		.demo__highlighter .demo__elem {
+		  color: #fff;
+		  border: none;
+		}
+		.demo__example {
+		  position: absolute;
+		  top: -22rem;
+		  left: 0;
+		  width: 100%;
+		  height: 22rem;
+		  padding: 5.5rem 7rem 0 7rem;
+		}
+		.demo__example-nb {
+		  position: relative;
+		  height: 13.5rem;
+		  padding: 0 1.5rem;
+		  border-bottom: 1rem solid #424242;
+		}
+
+		.nb-inner {
+		  position: relative;
+		  width: 100%;
+		  height: 12.5rem;
+		  border: 0.7rem solid #424242;
+		  overflow: hidden;
+		}
+
+		.example {
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
+		}
+		.check-out {
+		  position: absolute;
+		  bottom: 0.5rem;
+		  right: 0.5rem;
+		  font-size: 1.5rem;
+		  color: #fff;
+		  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+		}
