--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a, a:hover, a:visited, a:focus{
 .carousel-inner{height:100%;}
 	
 .transition-timer-carousel-progress-bar {
-    height: 3px;
+    height: 5px;
     width: 0%;
     margin: 0px 0px 0px 0px;
     border: none;
@@ -61,10 +61,6 @@ a, a:hover, a:visited, a:focus{
     position: relative;
 }
 
-.section-1{
-	padding-bottom: 20px;
-	border-bottom: 5px solid #f2e124;
-}
 
 .section-1, .section-1 .row{
 	min-height: 43rem;
@@ -76,9 +72,11 @@ a, a:hover, a:visited, a:focus{
 		  position: absolute;
 		  width: 36rem;
 		  height: 43rem;
+		  left: 5rem;
 		  padding-top: 22rem;
 		  background: #FFFFFF;
-		  box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.4);
+		  /*border: 3px solid #3A619E;*/
+		  /*box-shadow: 0 0.3rem 1.5rem rgba(0, 0, 0, 1);*/
 		  /*font-family: "Open Sans", Helvetica, Arial, sans-serif;*/
 		}
 		.demo__content {
@@ -219,4 +217,114 @@ a, a:hover, a:visited, a:focus{
 		  font-size: 1.5rem;
 		  color: #fff;
 		  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+		}
+
+.snippet{
+	margin: 10px auto;
+}
+
+
+/*Quote Carousel bootstrap codepen*/
+		/* carousel */
+		#quote-carousel 
+		{
+		  padding: 0 10px 30px 10px;
+		  margin-top: 30px 0px 0px;
+		}
+
+		/* Control buttons  */
+		#quote-carousel .carousel-control
+		{
+		  background: none;
+		  color: #222;
+		  font-size: 2.3em;
+		  text-shadow: none;
+		  margin-top: 30px;
+		}
+		/* Previous button  */
+		#quote-carousel .carousel-control.left 
+		{
+		  left: -12px;
+		}
+		/* Next button  */
+		#quote-carousel .carousel-control.right 
+		{
+		  right: -12px !important;
+		}
+		/* Changes the position of the indicators */
+		#quote-carousel .carousel-indicators 
+		{
+		  right: 50%;
+		  top: auto;
+		  bottom: 0px;
+		  margin-right: -19px;
+		}
+		/* Changes the color of the indicators */
+		#quote-carousel .carousel-indicators li 
+		{
+		  background: #c0c0c0;
+		}
+		#quote-carousel .carousel-indicators .active 
+		{
+		  background: #333333;
+		}
+		#quote-carousel img
+		{
+		  width: 250px;
+		  height: 100px
+		}
+		/* End carousel */
+
+		.item blockquote {
+		    border-left: none; 
+		    margin: 0;
+		}
+
+		.item blockquote img {
+		    margin-bottom: 10px;
+		}
+
+		.item blockquote p:before {
+		    content: "\f10d";
+		    font-family: 'Fontawesome';
+		    float: left;
+		    margin-right: 10px;
+		}
+
+
+
+		/**
+		  MEDIA QUERIES
+		*/
+
+		/* Small devices (tablets, 768px and up) */
+		@media (min-width: 768px) { 
+		    #quote-carousel 
+		    {
+		      margin-bottom: 0;
+		      padding: 0 40px 30px 40px;
+		      margin-top: 30px;
+		    }
+		    
+		}
+
+		/* Small devices (tablets, up to 768px) */
+		@media (max-width: 768px) { 
+		    
+		    /* Make the indicators larger for easier clicking with fingers/thumb on mobile */
+		    
+		    #quote-carousel .carousel-indicators {
+		        bottom: -20px !important;  
+		    }
+		    #quote-carousel .carousel-indicators li {
+		        display: inline-block;
+		        margin: 0px 5px;
+		        width: 15px;
+		        height: 15px;
+		    }
+		    #quote-carousel .carousel-indicators li.active {
+		        margin: 0px 5px;
+		        width: 20px;
+		        height: 20px;
+		    }
 		}
