--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html{
 }
 body{
 	height: 100%;
-	padding-top: 50px;
+	padding-top: 83px;
 	font-family: 'Nunito', sans-serif;
 }
 
@@ -18,7 +18,7 @@ body{
   min-height: 100%;
   height: auto !important;
   height: 100%;
-  margin-top: -50px;
+  /*margin-top: -50px;*/
 }
 
 #loader{
@@ -65,6 +65,8 @@ a, a:hover, a:visited, a:focus{
 .section-1, .section-1 .row{
 	min-height: 43rem;
 }
+
+
 
 /*Section Navigation by Nikolay Talanov (source: http://codepen.io/suez/public/)*/
 
@@ -223,6 +225,23 @@ a, a:hover, a:visited, a:focus{
 	margin: 10px auto;
 }
 
+.section-2{
+	padding-left: 0px;
+	padding-right: 0px;
+}
+.section-2:after {
+  content: '';
+  position: relative;
+  bottom: -30px;
+  width: 100%;
+  height: 60px;
+  background: #FFFFFF;
+  -webkit-transform: skewY(2.5deg);
+  -moz-transform: skewY(2.5deg);
+  -ms-transform: skewY(2.5deg);
+  -o-transform: skewY(2.5deg);
+  transform: skewY(-2.5deg);
+}
 
 /*Quote Carousel bootstrap codepen*/
 		/* carousel */
@@ -328,3 +347,22 @@ a, a:hover, a:visited, a:focus{
 		        height: 20px;
 		    }
 		}
+
+.content .hr{
+    margin: 25px 0;
+    height: 1px;
+    background: black;
+    background: -webkit-gradient(linear, 0 0, 100% 0, from(white), to(white), color-stop(50%, black));
+}
+
+/*#aboutNav*/
+.affix-top {
+  position: relative;
+}
+
+.affix {
+  top: 123px;
+}
+.affix-bottom {
+  position: absolute;
+}
