--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html{
 }
 body{
 	height: 100%;
-	padding-top: 83px;
+	padding-top: 109px;
 	font-family: 'Nunito', sans-serif;
 }
 
@@ -27,6 +27,7 @@ body{
 	top: 0px;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 	z-index: 99999;
 	background:url(../images/preloader.gif) 50% 50% no-repeat #fff;
 }
@@ -43,6 +44,23 @@ a, a:hover, a:visited, a:focus{
 
 #navigation > .navbar{
 	margin-bottom: 0px;
+}
+
+.navbar-brand{
+	padding: 0px;
+	height: 75px;
+	margin-left: 0px;
+}
+
+.navbar-brand>img{
+	height: inherit;
+}
+@media (min-width: 768px){
+	.navbar-nav>li>a {
+	  padding-top: 20px;
+	  padding-bottom: 20px;
+		line-height: 35px;
+	}
 }
 
 .carousel-control.left,.carousel-control.right{
